--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -12,13 +12,16 @@
   padding: 10px; 
   margin-top: 10px;
   margin-bottom: 40px;
+  min-height: 340px;
+  max-height: 340px;
+  overflow: hidden;
   @media (max-width: '1000px') {
     max-width: 100%;
     min-width: 100%;
   }
   .TmsImage{
     width: 100%;
-    height: 300px;
+    height: 240px;
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
