fix videos, fix filter order

--- a/src/styles/components/video.module.scss
+++ b/src/styles/components/video.module.scss
@@ -86,6 +86,9 @@
        @media (max-width: '1000px')  {
         width: 100%;
       }
+      &.w100{
+        width: 100%;
+      }
     }
     .SideVideos{
       width: 40%;
