fix pdf thumbnail

--- a/src/styles/components/video.module.scss
+++ b/src/styles/components/video.module.scss
@@ -123,6 +123,14 @@
       background-size: cover;
       background-position: center center;
     }
+    .Thumbnail{
+      width: 100%;
+      height: 380px;
+      border-radius: 8px;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center center;
+    }
     p{
       color: var(--Colors-Pure-Black, #000);
       font-family: "Roboto Serif";
