--- a/src/styles/components/resources.module.scss
+++ b/src/styles/components/resources.module.scss
@@ -76,6 +76,45 @@
   justify-content: flex-end;
 }
 
+.iframeBlocker{
+  position:relative;
+  width: 100%;
+  height: 145px;
+  border-radius: 10px;
+  overflow: hidden;
+  .iframeLoader{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: white;
+    z-index: 20;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  iframe{
+    background: white;
+    width: 100%; height: 100%; border: none;
+  }
+  .block{
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-right: solid #f3f3f2 13px;
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    pointer-events: all;
+    background: transparent;
+    &.blockTop{
+      border-top: solid #f3f3f2 40px;
+    }
+  }
+}
+
 .ResourceCard{
   width: 31%;
   background-color: #F3F3F2;
@@ -171,5 +210,25 @@
     color: white;
     text-decoration: none;
     padding: 5px;
+  }
+}
+
+.LoadingImage {
+  background: #f1f1f1;
+  width: 100%;
+  height: 160px;
+  border-radius: 4px;
+  animation: pulse 1.5s infinite ease-in-out;
+}
+
+@keyframes pulse {
+  0% {
+    background-color: #eee;
+  }
+  50% {
+    background-color: #ddd;
+  }
+  100% {
+    background-color: #eee;
   }
 }
