--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -4,8 +4,8 @@
 }
 
 .TmsItem{
-  max-width: 30%;
-  min-width: 30%;
+  max-width: 22%;
+  min-width: 22%;
   border-radius: 16px;
   background: #F3F3F2;
   box-shadow: 0px 0px 17px 0px rgb(0 0 0 / 31%);
@@ -28,7 +28,7 @@
     border-radius: 8px;
   }
   h4{
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     margin-bottom: 0px;
     margin-top: 15px;
   }
@@ -237,6 +237,7 @@
         margin-top: 10px;
         margin-bottom: 15px;
         line-height: 1.3rem;
+        text-align: left;
       }
       a{
         text-decoration: none;
