--- a/src/styles/components/resources.module.scss
+++ b/src/styles/components/resources.module.scss
@@ -96,19 +96,24 @@
   }
   iframe{
     background: white;
-    width: 100%; height: 100%; border: none;
+    width: 100%; height: 100%; 
+    border: solid #f3f3f2 1px;
+    overflow: hidden !important;
   }
   .block{
     position: absolute;
     top: 0;
     left: 0;
-    border-right: solid #f3f3f2 13px;
+    border-right: solid #f3f3f2 18px;
     border-radius: 10px;
     width: 100%;
     height: 100%;
     z-index: 10;
     pointer-events: all;
     background: transparent;
+    @media screen and (max-width: 1305px) {
+      border-bottom: solid #f3f3f2 25px;
+    }
     &.blockTop{
       border-top: solid #f3f3f2 40px;
     }
