--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -164,6 +164,7 @@
   &.small{
     font-size: 1.5rem;
   }
+  
 }
 .Description{
   font-family: Roboto;
@@ -174,6 +175,14 @@
   text-decoration-skip-ink: none;
   text-align: justify;
 }
+
+.linkTitle{
+    color: black;
+    text-decoration: none;
+    font-family: 'Roboto Serif';
+    font-size: 1.1rem;
+    font-weight: bold;
+  }
 
 .TitleWithIcon{
   @media (max-width: '750px') {
