--- a/src/styles/components/resources.module.scss
+++ b/src/styles/components/resources.module.scss
@@ -139,6 +139,7 @@
   min-height: 440px;
   .CardContent{
     max-width: 100%;
+    width: 100%;
     h3{
       max-width: 100%;
     }
@@ -165,7 +166,8 @@
       min-width: 100%;
     }
     .CardImage{
-      height: 100%;
+      height: 200px;
+      min-height: 200px;
       width: 40%;
       overflow: hidden;
       scrollbar-width: none;
