--- a/src/styles/components/resources.module.scss
+++ b/src/styles/components/resources.module.scss
@@ -132,6 +132,12 @@
     min-width: 100%;
     }
   }
+  
+  &.GridMode{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
   background-color: #F3F3F2;
   box-shadow: 0px 4px 16px 0px #00000040;
   border-radius: 18px;
@@ -142,6 +148,15 @@
     width: 100%;
     h3{
       max-width: 100%;
+    }
+  }
+  
+  &.GridMode .CardContent{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    p{
+      flex: 1;
     }
   }
   &.Small{
@@ -223,7 +238,7 @@
     margin-top: 0px;
     margin-bottom: 0px;
     max-width: 100%;
-        line-break: break-all;
+    line-break: break-all;
     font-family: 'Roboto';
     font-size: 14px;
     font-weight: 300;
