add second country page template in /lang

--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -20,6 +20,11 @@
     margin-bottom: 40px;
   }
 }
+.researchBlockContent{
+  p{
+    font-size: 1.3rem;
+  }
+}
 .CollaborationNetworkItem{
   width: 100%;
   height: 120px;
