--- a/src/styles/components/sections.module.scss
+++ b/src/styles/components/sections.module.scss
@@ -608,3 +608,33 @@ font-style: normal;
 font-weight: 400;
 line-height: normal;
 }
+
+.PagesSection{
+  width: 100%;
+  padding: 60px 0;
+  color: white;
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 1;
+  }
+  
+  > * {
+    position: relative;
+    z-index: 2;
+  }
+  
+  .PageContainer {
+    margin-bottom: 40px;
+  }
+}
