--- a/src/styles/components/layout.module.scss
+++ b/src/styles/components/layout.module.scss
@@ -1,26 +1,49 @@
+.SelectedMenuItemFullImage{
+  width: 20%;
+  @media screen and (max-width: 750px) {
+    width: 100%;
+    height: auto;
+  }
+  &.selectedSubItem{
+    width: 100%;
+    @media screen and (max-width: 750px) {
+      width: 100%;
+      height: auto;
+    }
+  }
+}
+
+
 .MegaMenuContainerWithItems {
   display: flex;
   width: 100%;
-  height: 100%;
-  flex-wrap: wrap;
-  align-content: flex-start;
-  column-gap: 6px;
+  min-height: 100%;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
   position: relative;
-  overflow: hidden; // <- opcional, mas ajuda visualmente
+  overflow: visible;
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
   @media screen and (max-width: 750px) {
     margin-bottom: 100px;
+    height: 100vh;
     background-size: contain;
+    overflow-y: auto;
   }
   .FullImageSubItembBtn{
-    @media screen and (max-width: 750px) {
+    display: block;
+    width: 100%;
+    margin-top: 20px;
     margin-bottom: 20px;
-    }
-    right: 0px;
     text-decoration: none;
     z-index: 99;
+    align-self: flex-end;
+    @media screen and (max-width: 750px) {
+      margin-top: 15px;
+      margin-bottom: 20px;
+    }
   }
   &::before {
     content: '';
@@ -33,10 +56,21 @@
     position: absolute;
   }
 
-  .InternalItem {
+  .InternalItemsWrapper {
     display: flex;
+    flex-wrap: wrap;
+    gap: 6px;
+    margin-bottom: 10px;
+    z-index: 1;
+    flex-shrink: 0;
+    width: 100%;
+  }
+
+  .InternalItem {
+    display: inline-flex;
     text-decoration: none;
-    color:black;    cursor: pointer;
+    color:black;
+    cursor: pointer;
     font-size: 1.0rem;
     letter-spacing: 0.11rem;
     font-weight: 400;
@@ -44,10 +78,13 @@
     border: solid #778899 1px;
     border-radius: 8px;
     padding: 2px 10px;
-    margin-bottom: 8px;
     background: rgba(255, 255, 255, 0.2); /* cor semi-transparente */
-  backdrop-filter: blur(15px); /* aplica o desfoque */
-  -webkit-backdrop-filter: blur(15px);
+    backdrop-filter: blur(15px); /* aplica o desfoque */
+    -webkit-backdrop-filter: blur(15px);
+    @media screen and (max-width: 750px) {
+      font-size: 0.80rem;
+      padding: 5px 10px;
+    }
     &:hover {
       transition: 0.2s;
       font-weight: 400;
@@ -65,11 +102,28 @@
   top:0;
   box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.50);
   @media (max-width: '1024px') {
+    position: fixed !important;
+    z-index: 99999 !important;
+    background-color: white !important;
     .SuperiorLinks{
       display: none !important;
     }
     .InfoNavContainer{
       display: none !important;
+    }
+    .LogoContainer{
+      padding: 5px 0px !important;
+      p{
+        font-size: 30px !important;
+      }
+      img{
+        width: 45px !important;
+      }
+      .BrandContent{
+        .InfoNavContainer{
+          display: none !important;
+        }
+      }
     }
   }
 .HeaderActionContainer{
@@ -431,14 +485,16 @@
     left: 50%;
     transform:translateX(-50%);
     width: calc(81.25rem * 1);
-    height: 75vh;
+    min-height: 75vh;
+    max-height: 90vh;
     display: flex;
     flex-direction: column;
     @media (max-width: '750px') {
       width: 100%;
       overflow-y: scroll;
-      padding: 20px 40px;
-      max-height: 90vh;
+      padding: 20px 10px;
+      max-height: 100vh;
+      height: 90vh;
     }
     h2{
       color: var(--Colors-Pure-Black, #000);
@@ -505,16 +561,12 @@
       
     }
     .MegaMenuRightSection{
-      height: 100%;
-      height: 55vh;
+      min-height: 100%;
+      height: auto;
+      max-height: 70vh;
     }
   }
   
-}
-.FullImageSubItembBtn{
-  position: absolute;
-  right: 20px;
-  bottom: 20px;
 }
 .halfImageContainer{
   >div{
