WCAG 2.1 AA minimum contrast requirement

--- a/src/styles/components/layout.module.scss
+++ b/src/styles/components/layout.module.scss
@@ -138,7 +138,7 @@
       transition: 0.2s;
       font-weight: 400;
       color: white;
-      background-color: #0093d5;
+      background-color: #007EB6;
     }
   }
 }
