--- a/src/styles/components/resources.module.scss
+++ b/src/styles/components/resources.module.scss
@@ -61,9 +61,9 @@
       cursor: not-allowed;
     }
     &.active{
-      background-color: #0093D5;
+      background-color: #007EB6;
       color: white;
-      border-color: #0093D5;
+      border-color: #007EB6;
     }
   }
 }
@@ -253,7 +253,7 @@
   }
   .buttonLink{
     
-    background-color:#0093D5;
+    background-color:#007EB6;
     border-radius: 5px;
     display: flex;
     flex-direction: row;
