--- a/src/styles/custom-global.scss
+++ b/src/styles/custom-global.scss
@@ -8,7 +8,7 @@
   height: 0px;
 }
 ::-webkit-scrollbar-thumb {
-  background:#0093d5;
+  background:#007EB6;
   border: 0px none #ffffff;
   border-radius: 0px;
 }
