--- a/src/styles/pages/pages.module.scss
+++ b/src/styles/pages/pages.module.scss
@@ -50,7 +50,7 @@
 }
 .MapDetails{
   .RelatedDocuments{
-    color: #0093D5;
+    color: #007EB6;
     font-size: 1rem;
   }
   h5{
@@ -260,8 +260,8 @@
 }
 
 .tmgl_secondary_button{
-  border:solid #0093d5 2px;
-  color: #0093d5;
+  border:solid #007EB6 2px;
+  color: #007EB6;
   background-color: #C2ECFF;
 }
 
@@ -308,7 +308,7 @@
       text-decoration-skip-ink: none;
     }
     a{
-      color: #0093D5;
+      color: #007EB6;
     }
   }
   
