--- a/src/styles/components/breadcrumbs.module.scss
+++ b/src/styles/components/breadcrumbs.module.scss
@@ -10,9 +10,9 @@
   a{
     text-decoration: none;
     color: inherit;
-    color: #0093D5;
+    color: #007EB6;
     cursor: pointer;
-      color: #0093D5;
+      color: #007EB6;
       font-family: Roboto;
       font-size: 16px;
       font-style: normal;
