--- a/src/styles/components/feature-stories.module.scss
+++ b/src/styles/components/feature-stories.module.scss
@@ -12,7 +12,7 @@
       width: 100%;
     }
     h4,h3,h2{
-      color:  #0093D5;
+      color:  #007EB6;
       font-family: "Roboto Serif";
     }
     h4{
@@ -20,7 +20,7 @@
       margin-top: 0px;
     }
     h3{
-      color:  #0093D5;
+      color:  #007EB6;
       font-family: "Roboto Serif";
       font-size: 28px;
       font-style: normal;
