--- a/src/styles/components/layout.module.scss
+++ b/src/styles/components/layout.module.scss
@@ -1,5 +1,11 @@
 
-
+.HeaderContent{ 
+  nav{
+    a{
+      text-decoration: none;
+    }
+  }
+}
 .LogoContent{
   width: 45%;
  
@@ -321,7 +327,10 @@
   background-color: #F6F6F6;
   z-index: 999;
   border-radius: 0px 0px 16px 16px;
-  box-shadow: inset 0px 4px 16px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 
+  inset 4px 0px 16px 0px rgba(0, 0, 0, 0.25),  /* lateral direita */
+  inset -4px 0px 16px 0px rgba(0, 0, 0, 0.25),  /* lateral esquerda */
+  inset 0px -4px 16px 0px rgba(0, 0, 0, 0.25);  /* embaixo */
   nav{
     padding: 40px 30px 0px 30px;
     &.secondNav{
@@ -557,7 +566,10 @@
   .MegaMenu{
     padding: 30px 70px;
     border-radius: 0px 0px 16px 16px;
-    box-shadow: inset 0px 4px 16px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 
+  inset 4px 0px 16px 0px rgba(0, 0, 0, 0.25),  /* lateral direita */
+  inset -4px 0px 16px 0px rgba(0, 0, 0, 0.25),  /* lateral esquerda */
+  inset 0px -4px 16px 0px rgba(0, 0, 0, 0.25);  /* embaixo */
     position: absolute;
     background: #f9f9f9;
     left: 50%;
