--- a/src/styles/components/sections.module.scss
+++ b/src/styles/components/sections.module.scss
@@ -146,6 +146,7 @@
       .TitleWithIcon, h2{
         width: 100%;
         max-width: 100%;
+        
       }
     }
   }
@@ -461,6 +462,7 @@
     max-width: 50vw;
     @media (max-width: '750px') {
       width: 100%;
+      padding-left: 75px;
       max-width: 100%;
     }
     @media (max-width: '750px') {
