--- a/src/styles/pages/pages.module.scss
+++ b/src/styles/pages/pages.module.scss
@@ -258,6 +258,7 @@
     @media (max-width: '750px') {
       width: 100%;
       max-width: 100%;
+      padding-left: 75px;
     }
 }
 .NotFoundPage{
