--- a/src/styles/components/video.module.scss
+++ b/src/styles/components/video.module.scss
@@ -79,7 +79,7 @@
 }
 
 .TitleWithIcon{
-  text-transform: capitalize;
+  text-transform: none;
   padding-left: 40px;
   background-image: url('../../../public/local/svg/simbol.svg');
   background-position: left center;
