--- a/src/styles/pages/home.module.scss
+++ b/src/styles/pages/home.module.scss
@@ -611,3 +611,20 @@
     }
   }
 }
+
+.VideoModalClose {
+  position: absolute !important;
+  top: 10px !important;
+  right: 10px !important;
+  z-index: 1000 !important;
+  background-color: rgba(0, 0, 0, 0.5) !important;
+  color: white !important;
+  border-radius: 50% !important;
+  width: 40px !important;
+  height: 40px !important;
+  border: none !important;
+
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.7) !important;
+  }
+}
