--- a/src/styles/components/multitab.module.scss
+++ b/src/styles/components/multitab.module.scss
@@ -87,6 +87,62 @@
   }
 }
 
+.DisclaimerMultitabContainer {
+  background-color: #ffffff;
+  min-height: 300px;
+  width: 100%;
+  float: left;
+
+  .DisclaimerTabList {
+    width: 300px;
+    min-width: 300px;
+    border-right: 1px solid #e0e0e0;
+    padding-right: 0;
+  }
+
+  .DisclaimerTabButton {
+    width: 100%;
+    text-align: left;
+    padding: 12px 16px;
+    border: none;
+    border-bottom: 1px solid #e0e0e0;
+    background-color: #ffffff;
+    color: #006CB0;
+    font-size: 14px;
+    line-height: 1.4;
+    transition: background-color 0.2s;
+
+    &:hover {
+      background-color: #f5f5f5;
+    }
+
+    &[data-active] {
+      background-color: #f0f8ff;
+      border-right: 3px solid #006CB0;
+      font-weight: 600;
+    }
+  }
+
+  .DisclaimerTabTitle {
+    font-family: Roboto, sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    color: #006CB0;
+    display: block;
+    text-align: left;
+  }
+
+  .DisclaimerTabContent {
+    font-family: Roboto;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 180%;
+    letter-spacing: 0%;
+    padding: 20px 40px;
+    color: #333333;
+  }
+}
+
 .tab {
   position: relative;
   border-radius: 0px;
